--- a/translations/modpack/assets/hardcorealchemy_modpack_guide/lang/en_US.lang
+++ b/translations/modpack/assets/hardcorealchemy_modpack_guide/lang/en_US.lang
@@ -1,19 +1,19 @@
 #
 # Copyright 2021 asanetargoss
 # 
-# This file is part of the Hardcore Alchemy capstone mod.
+# This file is part of Hardcore Alchemy translations.
 # 
-# The Hardcore Alchemy capstone mod is free software: you can redistribute it and/or modify
+# Hardcore Alchemy translations is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as published by
 # the Free Software Foundation version 3 of the License.
 # 
-# The Hardcore Alchemy capstone mod is distributed in the hope that it will be useful,
+# Hardcore Alchemy translations is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU Lesser General Public License for more details.
 # 
 # You should have received a copy of the GNU Lesser General Public License
-# along with Hardcore Alchemy.  If not, see <http://www.gnu.org/licenses/>.
+# along with Hardcore Alchemy translations.  If not, see <http://www.gnu.org/licenses/>.
 #
 
 language.name=English
