--- a/translations/modpack/assets/hardcorealchemy_modpack_guide/lang/en_US.lang
+++ b/translations/modpack/assets/hardcorealchemy_modpack_guide/lang/en_US.lang
@@ -87,3 +87,20 @@ hardcorealchemy.upgradeguide.0.6.1.gameplay_tips.title=Gameplay tips
 
 hardcorealchemy.upgradeguide.0.6.1.gameplay_tips.earlygame.title=Early game
 hardcorealchemy.upgradeguide.0.6.1.gameplay_tips.earlygame.1=Heads up! It should be a bit easier to find reeds in new chunks in winter, as the bottom blocks of reeds can now survive next to ice. However, as a tradeoff, reeds and cacti no longer grow in winter.
+
+############
+# 0.7.1 Upgrade Guide
+############
+
+hardcorealchemy.upgradeguide.0.7.1.author=Hardcore Alchemy
+hardcorealchemy.upgradeguide.0.7.1.display=0.7.1 Upgrade Guide
+hardcorealchemy.upgradeguide.0.7.1.title=0.7.1 Upgrade Guide
+hardcorealchemy.upgradeguide.0.7.1.welcome=Hardcore Alchemy
+
+# 0.7.1 Upgrade Guide: Gameplay tips
+
+hardcorealchemy.upgradeguide.0.7.1.gameplay_tips.title=Gameplay tips
+
+hardcorealchemy.upgradeguide.0.7.1.gameplay_tips.midgame.title=Mid game
+hardcorealchemy.upgradeguide.0.7.1.gameplay_tips.midgame.1=Is the Journal from Astral Sorcery slow to navigate? Try using the WASD keys.
+hardcorealchemy.upgradeguide.0.7.1.gameplay_tips.midgame.2=Players building wizard towers, especially for Astral Sorcery, should consider crafting elevator blocks for easier navigation. You can jump or sneak while on an Elevator block to go to the next higher/lower Elevator block at the same latitude and longitude.
