--- a/translations/creatures/assets/hardcorealchemy/lang/en_US.lang
+++ b/translations/creatures/assets/hardcorealchemy/lang/en_US.lang
@@ -83,3 +83,7 @@ hardcorealchemy.instinct.home.nether.fulfilled=Your inner flame stabilizes.
 
 hardcorealchemy.instinct.unencumbered.need=You despise having your movements constrained.
 hardcorealchemy.instinct.unencumbered.action=You tear off the armor.
+
+# Research
+
+hardcorealchemy.research.knowledge_fact.dig_dirt_warning.acquire=You suspect your current tool is not suitable for digging dirt.
