Remove random level system. Players now do more damage against mobs they have the morph for. Players do less damage against most other mobs.
Attack multiplier depends on difficulty level.

Also add ICapabilityHumanity.getHasForgottenHumanForm, currently always false

--- a/translations/creatures/assets/hardcorealchemy/lang/en_US.lang
+++ b/translations/creatures/assets/hardcorealchemy/lang/en_US.lang
@@ -88,3 +88,4 @@ hardcorealchemy.instinct.unencumbered.action=You tear off the armor.
 
 hardcorealchemy.research.knowledge_fact.magic_inhibition_warning.acquire=You fear powerful magic will interfere with your ability to morph.
 hardcorealchemy.research.knowledge_fact.dig_dirt_warning.acquire=You suspect your current tool is not suitable for digging dirt.
+hardcorealchemy.research.knowledge_fact.kill_mastery_hint.acquire=With each creature you master, you will acquire their form, and can more easily exploit their weaknesses.
